# HomeWork6

./: CMakeLists.txt  README.md
src/: MathException.cpp  MathException.h  Task1.cpp  Task1.h  Task2.h  Task3.cpp  Task3.h  Task4.cpp  Task4.h  main.cpp
