cmake_minimum_required(VERSION 3.26)
project(HomeWork6)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWork6 src/main.cpp
        src/Task1.cpp
        src/Task1.h
        src/Task2.h
        src/Task3.cpp
        src/Task3.h
        src/Task4.cpp
        src/Task4.h
        src/MathException.cpp
        src/MathException.h)
